tests/expectations/compiler/definition/use_decl_variable_as_assign_fail.out
Error [ETYC0372005]: Unknown variable `b`
    --> compiler-test:5:14
     |
   5 | 	let b: u8 = b;
     |              ^
